fix: home 화면 api response에 최저가 필드 추가